--- a/first_webpage/index.html
+++ b/first_webpage/index.html
@@ -1,1 +1,44 @@
 <h1>First Web Page</h1>
+
+<p>
+    Kindly do exactly what you see here as it would affect your score <br/>
+    Whether it is your first webpage in life or not, use the heading above it won't bie. 
+    <br/>
+</p>
+
+<h2>
+    H2 Heading
+</h2>
+<p>
+    As a best practice, your webpage should have just one h1 element
+</p>
+
+<h3>h3 Heading</h3>
+
+<p>
+    This test is too simple to fail. <br/>
+    It is simply a test of how much you have been following the course.
+
+</p>
+<p>
+    Thanks.. Wait.. <br/>
+    You will have to upload this project to github.. Yea
+</p>
+
+<h4>
+    H4 Heading
+</h4>
+<p>
+    Use the file structure that will be shown here below 
+    <nr/>
+
+    <pre>
+        :::first_webpage:::
+                |
+                ----------:::index.html:::
+                |
+                ----------:::style.css:::
+                |
+                ----------:::script.js:::
+    </pre>
+</p>
